--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,8 +22,8 @@ theme:
     logo: images/favicon.png
     features:
       - content.code.annotate
-      - navigation.tabs         # Use tab or list
-      - navigation.tabs.sticky
+#      - navigation.tabs         # Use tab or list
+#      - navigation.tabs.sticky
       - navigation.tracking
       - navigation.instant
       - search.suggest          # sugess when use plugin.search
