--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url: https://omegakid1902.github.io/
 nav:
   - Introduction: about.md
   - Home: Enter the garden.md
-  - Kinh Thánh: Projects/Bible Study Kit/Scripture (BPT)/The Bible.md
+  - Kinh Thánh: 'Projects/Bible Study Kit/Scripture (BPT)/The Bible.md'
   - Lịch sử:
       - Lịch sử Việt Nam: 
           - Zet/Lịch Sử Việt Nam.md
