--- a/.github/workflows/gh-pages-obsidian-mkdocs.yml
+++ b/.github/workflows/gh-pages-obsidian-mkdocs.yml
@@ -52,6 +52,7 @@ jobs:
           cp -rf src/stylesheets docs/
           cp -rf src/javascripts docs/
           cp -rf src/d3graph docs/
+          cp -rf src/graph_view docs/
           python backlinks.py
           python mdgraph/mdgraph.py mdgraph/mdgraph_config.json
           make build-docs
