--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ mkdocs-autolinks-plugin==0.4.0
 mkdocs-material==8.0.2
 mkdocs-material-extensions==1.0.3
 mkdocs-plugin-tags @ git+https://github.com/omegakid1902/mkdocs-plugin-tags.git
-mkdocs-roamlinks-plugin==0.1.3
+mkdocs-roamlinks-plugin @ git+https://github.com/omegakid1902/mkdocs-roamlinks-plugin.git # mkdocs-roamlinks-plugin==0.1.3 # dim out print
 mkdocs-section-index==0.3.2
 networkx==2.5
 packaging==21.2
