--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: The Second Brain
 site_url: https://omegakid1902.github.io/
 nav:
-  - Home: index.md
-  - Religion:
+  - Trang chủ: index.md
+  - Tôn giáo:
       - Zet/Religion.md
       - Công giáo: Zet/Công Giáo.md
       - Phật giáo: Zet/Phật Giáo.md
@@ -12,10 +12,12 @@ nav:
   - Lịch sử:
       - Lịch sử Việt Nam: Zet/Lịch Sử Việt Nam.md
       - Lịch sử Trung Quốc: Zet/Lịch sử Trung Quốc.md
-  - Programming: Zet/Programming.md
+  - Lập trình: Zet/Programming.md
   - Zettelkasten: Zet/Zettelkasten.md
   - Đại dịch COVID 19: Zet/Đại dịch COVID-19.md
-  - Introduction: about.md
+  - Thế giới tâm linh: Zet/Thế giới tâm linh.md
+  - Các bài viết: Zet/Writing/Danh sách các bài viết.md
+  - Giới thiệu: about.md
 
 theme:
     name: material
