--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - Đại dịch COVID 19: Zet/Đại dịch COVID-19.md
   - Thế giới tâm linh: Zet/Thế giới tâm linh.md
   - Các bài viết: Zet/Writing/Danh sách các bài viết.md
+  - Ngày tháng: dates/date_list.md
   - Giới thiệu: about.md
 
 theme:
